# linkedin-jobs-analysis

./: .gitignore  README.md  pyproject.toml
frontend/: app.py  readme.md  requirements.txt  wordcloud_template.py
frontend/data/: cities.py  states.py
linkedin-service/: docker-compose.prod.yml
scraping/: README.md  pyproject.toml
scraping/jobscraping/: pipelines.py  settings.py
scraping/jobscraping/spiders/: linkedin.py
