[tool.poetry]
name = "csce-5214-p3"
version = "0.1.0"
description = "analyzing linkedin job ads"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
requests = "^2.24.0"
numpy = "^1.19.2"
pandas = "^1.1.3"
Scrapy = "^2.4.0"
beautifulsoup4 = "^4.9.3"
fastapi = {extras = ["all"], version = "^0.61.1"}
dash = "^1.16.3"
dash-bootstrap-components = "^0.10.7"
wordcloud = "^1.8.0"



[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
notebook = "^6.1.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=1.1.3"]
build-backend = "poetry.masonry.api"
